--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^1.3.6",
     "body-parser": "^1.20.2",
     "cytoscape": "^3.24.0",
+    "cytoscape-d3-force": "^1.1.4",
     "cytosnap": "^3.1.0",
     "d3": "^7.8.4",
     "d3-interpolate": "^3.0.1",
